Bug 441726 - Small translation problem in System Settings with Login Screen
Summary: Small translation problem in System Settings with Login Screen
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_sddm (other bugs)
Version First Reported In: 5.22.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-29 20:31 UTC by roxfr
Modified: 2022-08-09 22:50 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
System_settings_-_Login_screen (384.20 KB, image/png)
2021-08-29 20:31 UTC, roxfr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description roxfr 2021-08-29 20:31:45 UTC
Created attachment 141138 [details]
System_settings_-_Login_screen

Hi,
I encountered a small translation problem in System Settings with Login Screen.
See attached image.
Regards,
Roxfr
Comment 1 Bug Janitor Service 2021-08-30 00:22:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/sddm-kcm/-/merge_requests/17
Comment 2 Nicolas Fella 2022-08-09 22:50:20 UTC
Git commit d6d13d382b4b7d4b452c890004f639b6eea20670 by Nicolas Fella.
Committed on 09/08/2022 at 22:29.
Pushed by nicolasfella into branch 'master'.

Fix translating error messages from helper

Regular i18n does not seem to work for strings in the helper process, presumably due to it being run with elevated priviledges.

Instead use the lazy variant to only extract the strings and call i18n later when we are not in the helper any more

M  +6    -5    sddmauthhelper.cpp
M  +2    -2    src/package/contents/ui/main.qml
M  +1    -1    src/sddmkcm.h

https://invent.kde.org/plasma/sddm-kcm/commit/d6d13d382b4b7d4b452c890004f639b6eea20670