Fix translating error messages from helper

Regular i18n does not seem to work for strings in the helper process, presumably due to it being run with elevated priviledges.

Instead use the lazy variant to only extract the strings and call i18n later when we are not in the helper any more

BUG: 441726